--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -25,7 +25,7 @@ Tags:
 1.0 Typography & Colors 
 2.0 Navgation
 3.0 Layout
-    3.1 Header Section
+    3.1 Index Header Section
 4.0 Media Queries
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
@@ -54,4 +54,15 @@ nav .boder {
 nav .profile-link .profile-img {
     width: 48px;
     border-radius: 50%
+}
+/*--------------------------------------------------------------
+3.0 Layout
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+3.1 Index Header Section
+--------------------------------------------------------------*/
+header {
+    background-image: url(../img/bg.jpg);
+    background-size: cover;
+    
 }
