--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -26,6 +26,7 @@ Tags:
 2.0 Navgation
 3.0 Layout
     3.1 Index Header Section
+    3.2 Login Section
 4.0 Media Queries
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
@@ -33,6 +34,7 @@ Tags:
 --------------------------------------------------------------*/
 .bg-color-1 { background: #fff !important }
 .bg-color-2 { background: #364559 !important }
+.bg-color-3 { background: #ff3363 !important }
 .font-color-1, nav .active-link a { color: #ff3363 !important }
 .font-color-2 { color:#fff }
 .font-cairo { font-family: 'Cairo', sans-serif }
@@ -41,9 +43,8 @@ Tags:
 .f-24 { font-size: 24px }
 .f-30 { font-size: 30px }
 .f-70 {font-size: 70px  }
-.font-700 { font-weight: 700 }
-.c{ margin-top: 50px;}   
-
+.font-700 { font-weight: 700 } 
+.opc-40 {opacity: 0.4}
 .over {
     width: 100%;
     position: absolute;
@@ -51,22 +52,6 @@ Tags:
     opacity: 0.4;
     z-index: 100
 }
-.loginbox{ 
-       position: absolute;
-       transform: translate(-50%,-50%);
-       margin-top: 50%;
-       right: 40%;
-       height: 300PX;
-       width: 350PX;
-       box-sizing: border-box;
-       box-decoration-break:slice;
-       background: rgb(192,192,192,.5)
-       
-    
-}
-.form-1{
-      background: lightgrey;
-     }
 .icon2{
             font-size: 3em;
             margin-right:40%;
@@ -76,13 +61,7 @@ Tags:
     position: absolute;
     box-sizing: border-box;
     box-decoration-break: slice;
-    background: rgba(0,0,0,.5);
-    
-    
-
-}
-form{
-    margin-top:40px;
+    background: rgba(0,0,0,.5)
 }
 
 /*--------------------------------------------------------------
@@ -115,3 +94,11 @@ header .container { z-index: 200 }
     font-size: 60px;
     color: beige;
 }
+/*--------------------------------------------------------------
+3.2 Login Section
+--------------------------------------------------------------*/
+.login{ 
+    background: rgba(253, 245, 245, 0.5);
+    padding-left: 30px !important;
+    padding-right: 30px !important
+ }
