--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -33,6 +33,8 @@ Tags:
 --------------------------------------------------------------*/
 .bg-color-1 { background: #fff !important }
 .bg-color-2 { background: #364559 !important }
+.bg-color-3 { background: #002233  !important }
+
 .font-color-1, nav .active-link a { color: #ff3363 !important }
 .font-color-2 { color:#fff }
 .font-cairo { font-family: 'Cairo', sans-serif }
@@ -40,7 +42,8 @@ Tags:
 .f-18 { font-size: 18px }
 .f-24 { font-size: 24px }
 .f-30 { font-size: 30px }
-.f-70 {font-size: 70px  }
+.f-70 { font-size: 73px }
+.f-85 { font-size:85px  }
 .font-700 { font-weight: 700 }
 .c{ margin-top: 50px;}   
 
@@ -77,6 +80,7 @@ Tags:
     box-sizing: border-box;
     box-decoration-break: slice;
     background: rgba(0,0,0,.5);
+    width:1000px
     
     
 
