--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -35,7 +35,8 @@ Tags:
 .bg-color-1 { background: #fff !important }
 .bg-color-2 { background: #364559 !important }
 .bg-color-3 { background: #ff3363 !important }
-.bg-color-4 { background: #002233 !important }
+.bg-color-4 { background: #36455A !important }
+.bg-color-5 { background: #949293 !important }
 .font-color-1, nav .active-link a { color: #ff3363 !important }
 .font-color-2 { color:#fff }
 .font-cairo { font-family: 'Cairo', sans-serif }
