--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -129,3 +129,45 @@ header .container { z-index: 200 }
     height: 380px;
     overflow: hidden
 }
+.personal-img:hover { cursor: pointer }
+.personal-img img   { z-index: 3 }
+.personal-img .over { z-index: -5 }
+.personal-img:hover .over { z-index: 1000 }
+/*Start Upload Btn */
+.btn-tertiary {
+    color: #555;
+    padding: 0;
+    line-height: 40px;
+    width: 300px;
+    margin: auto;
+    display: block;
+    border: 2px solid #555;
+  }
+.btn-tertiary:hover, .btn-tertiary:focus {
+    color: #888888;
+    border-color: #888888;
+}
+/* input file style */
+.input-file {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+.input-file + .js-labelFile {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding: 0 10px;
+    cursor: pointer;
+}
+.input-file + .js-labelFile .icon:before {
+    content: "\f093";
+}
+.input-file + .js-labelFile.has-file .icon:before {
+    content: "\f00c";
+    color: #5AAC7B;
+}
+/*End Upload Btn */
