--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -199,7 +199,7 @@ header .container { z-index: 200 }
 /*--------------------------------------------------------------
 3.4 Certfcate Section
 --------------------------------------------------------------*/
-.certfcate .btn-add {
+.btn-add {
     color: #FF3167;
     display: inline-block;
     padding: 0px 5px;
