--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -36,7 +36,7 @@ Tags:
 --------------------------------------------------------------*/
 .bg-color-1 { background: #fff !important }
 .bg-color-2 { background: #364559 !important }
-.bg-color-3 { background: #ff3363 !important }
+.bg-color-3, input[type="radio"]:checked + label span { background: #ff3363 !important }
 .bg-color-4 { background: #36455A !important }
 .bg-color-5 { background: #949293 !important }
 .bg-color-6 { background: rgb(255, 51, 99, 0.4) !important }
@@ -207,4 +207,26 @@ header .container { z-index: 200 }
     border: 4px solid #eee;
     font-size: 20px;
     font-weight: 900
+}
+/*--------------------------------------------------------------
+3.4 Add Services Section
+--------------------------------------------------------------*/
+
+/* Start Radio */
+input[type="radio"] { display: none }
+input[type="radio"] + label { cursor:pointer }
+input[type="radio"] + label span {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  margin: -1px 4px 0 0;
+  vertical-align: middle; 
+  border-radius: 50%;
+  background-color: #292b2a
+}
+input[type="radio"] + label span, input[type="radio"]:checked + label span {
+  -webkit-transition: background-color 0.4s linear;
+  -o-transition: background-color 0.4s linear;
+  -moz-transition: background-color 0.4s linear;
+  transition: background-color 0.4s linear
 }
