--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -32,7 +32,7 @@ Tags:
 4.0 Media Queries
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
-1.0 Typography & Colors
+1.0 Typography ,Colors & Global Class
 --------------------------------------------------------------*/
 .bg-color-1 { background: #fff !important }
 .bg-color-2 { background: #364559 !important }
