--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -34,6 +34,7 @@ Tags:
 /*--------------------------------------------------------------
 1.0 Typography ,Colors & Global Class
 --------------------------------------------------------------*/
+body { background: #EEE}
 .bg-color-1 { background: #fff !important }
 .bg-color-2 { background: #364559 !important }
 .bg-color-3, input[type="radio"]:checked + label span { background: #ff3363 !important }
@@ -44,6 +45,7 @@ Tags:
 .bg-color-8 { background: #EEEEEE !important}
 .bg-color-9 { background: #FF5E87 !important}
 .bg-color-10 { background: rgb(54,69,90, 0.4) !important }
+.bg-color-11 { background: #d7d7d9 !important }
 .font-color-1, nav .active-link a { color: #ff3363 !important }
 .font-color-2 { color:#fff }
 .font-color-3 { color: #364559 !important }
@@ -52,16 +54,21 @@ Tags:
 .font-changa,p { font-family: 'Changa', sans-serif }
 .f-2  { font-size: 2.5em}
 .f-3  { font-size: 3em  }
+.f-10 { font-size: 10px }
 .f-18 { font-size: 18px }
+.f-20 { font-size: 20px }
 .f-24 { font-size: 24px }
 .f-30 { font-size: 30px }
 .f-40 { font-size: 40px }
+.f-48 { font-size: 48px }
 .f-70 { font-size: 70px }
 .f-73 { font-size: 73px }
 .f-85 { font-size:85px  }
 .f-140 { font-size: 140px }
 .font-700 { font-weight: 700 } 
 .opc-40 {opacity: 0.4}
+.of-y-x { overflow-y: hidden}
+.border1 { border:2px solid #36455A }
 .over {
     width: 100%;
     position: absolute;
@@ -112,7 +119,6 @@ header {
     background-size: cover
 }
 header .container { z-index: 200 }
-
 /*--------------------------------------------------------------
 3.2 Login Section
 --------------------------------------------------------------*/
