--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -571,3 +571,12 @@ main.services .price-range .range .range-box {
 /*--------------------------------------------------------------
 4.0 Media Queries
 --------------------------------------------------------------*/
+.card-img-top{
+        height: 285px;
+        width: 285px;
+    }
+.coname{
+        margin: 20px;
+        margin-right: 100px;
+    }
+
