--- a/layout/css/main.css
+++ b/layout/css/main.css
@@ -579,4 +579,9 @@ main.services .price-range .range .range-box {
         margin: 20px;
         margin-right: 100px;
     }
-
+/*---------------------------------------------------------------
+5.0 Media Queries
+----------------------------------------------------------------*/
+.stats-small {
+  min-height: 8.7rem;
+  overflow: hidden !important; }
