--- a/admin/css/theme.css
+++ b/admin/css/theme.css
@@ -327,7 +327,7 @@ section {
 }
 
 .login-wrap {
-    max-width: 54px;
+    max-width: 540px;
     padding-top: 8vh;
     margin: 0 auto;
 }
@@ -14557,7 +14557,9 @@ section {
 }
 
 /* Background*/
-
+.bg-white {
+    background: #fff;
+}
 
 .bg-overlay {
     position: absolute;
@@ -14572,19 +14574,68 @@ section {
     background: rgba(255, 94, 135, 0.9);
 }
 
+.bg-c1 {
+    background: #00ad5f;
+}
 
+.bg-c2 {
+    background: #fa4251;
+}
 
+.bg-c3 {
+    background: #ff8300;
+}
 
+.bg-flat-color-1 {
+    background: #20a8d8;
+}
 
+.bg-flat-color-2 {
+    background: #63c2de;
+}
 
+.bg-flat-color-3 {
+    background: #ffc107;
+}
 
+.bg-flat-color-4 {
+    background: #f86c6b;
+}
 
+.bg-flat-color-5 {
+    background: #4dbd74;
+}
 
+/*Image*/
+.img-radius {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    overflow: hidden;
+}
 
+.img-cir {
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    overflow: hidden;
+}
 
+.img-40 {
+    height: 40px;
+    width: 40px;
+}
 
+.img-120 {
+    width: 120px;
+    height: 120px;
+}
 
+.vmap {
+    width: 100%;
+    height: 400px;
+}
 
-
-
-
+.vue-lists ul, .vue-lists ol {
+    padding-left: 30px;
+}
