--- a/MobileApp/www/css/index.css
+++ b/MobileApp/www/css/index.css
@@ -78,6 +78,7 @@ header{
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 header .title {
     color:#fff;
@@ -122,3 +123,8 @@ header .over {
     width: 67%;
     padding: 5px;
 }
+form{background-color:darkgray; bottom: 43px}
+.colo{background-color: #36455a;height: 160px;}
+ul{list-style-type: none}
+button{border: none;text-align: center;height: 50px;background-color:#ff3363;color: aliceblue }
+
